methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:3: error: not found: type color
def isFacingTrail(c:color):Boolean = {
                    ^SlugSnail:21: error: not found: type color
def chemin(c:color) {
             ^